<resources>
    <string name="apps_name" translatable="false">Cali\'s Diary</string>
    <string name="map_id" translatable="false">API_KEY_PLACEHOLDER</string>
    <string name="agora_token" translatable="false">007eJxTYDh/sLUh/VDWaXWW71u2egirNn3P5vkp4T83YX6XYLi/4lIFBoNUo6RkYwtLizRLC5NkI3PL1OSUVPNkwyRzAwvLlBQz/m/8KQ2BjAxhlcFMjAwQCOKzMJSkFpcwMAAAIZseRg==</string>
    <string name="facebook_app_id" translatable="false">597210235201677</string>
    <string name="fb_login_protocol_scheme" translatable="false">Likes</string>
    <string name="make_oppintment_sub_heading" translatable="false">Thank you for the opportunity to care for your family member. So that we may becomebetter acquainted, please complete the following information.</string>
    <string name="degree_type">Degree Type</string>
    <string name="gender">Gender</string>
    <string name="appointment_type">Appoint. Type</string>
    <string-array name="how_hear">
        <item>Select how did you hear</item>
        <item>Internet</item>
        <item>Veterinarian Referral</item>
        <item>Client’s Recommendation</item>
    </string-array>
    <string name="vendor_type">Vendor Type</string>
    <string name="filter">Filter</string>
    <string name="pet_type">Pet Type</string>
    <string-array name="genderPet">
        <item>Select gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="Marshmallow_toast_string_microphone_permission" translatable="false">Microphone permission needed for recording. Please allow in App Settings for additional functionality.</string>
    <string name="Marshmallow_toast_string_external_permission" translatable="false">External Storage permission needed. Please allow in App Settings for additional functionality.</string>
    <string name="Marshmallow_toast_string_Camera_permission" translatable="false">Camera permission needed. Please allow in App Settings for additional functionality.</string>
    <string name="desc_tracking" translatable="false">Lorem ipsum dolor sit amet consectetur. Purus quis lectus est ut. Fames eget volutpat commodo fringilla integer. Nisl lacus non a in eu. Faucibus hendrerit velit ante est imperdiet. Viverra tortor sed neque ac sollicitudin libero. Pharetra felis tincidunt eget amet at ante. Dignissim vitae facilisi sit accumsan. Nisl magnis tellus felis convallis aliquam scelerisque sit accumsan sit.</string>
    <string name="time_hint" translatable="false">hh:mm</string>
    <string name="date_hint" translatable="false">dd-mm-yyyy</string>
    <string name="colon" translatable="false">:</string>
    <string name="tracking_device_desc" translatable="false">We are the Fastest Growing GPS Tracking Solution provider, With Our Head Office in the India, Hong Kong and Taiwan. We have easy to use GPS Tracking Solution Designed for all different kinds of Business. We Offer GPS-Based Fleet Tracking Software, State-of-the-art Web Based GPS tracking &amp; Reporting Software. We help you to track &amp; Manage Assets &amp; Fleet of vehicles from anywhere in world while getting a great return on Investment (ROI). With over 1000+ dedicated channel partners spread across 750 plus Indian cities, GPS India cater to a wide variety of clients indirectly as well through its partners. We have a dedicated sales team helping the partner identify the target market, best suited solution, scope of expansion, marketing strategy and provides white labeled marketing and support material. We have a dedicated IT Support team for partner and a carefully monitored ticketing system which helps the partner resolve client issues at the earliest.</string>
    <string name="enterOldPassword">Enter Old Password</string>
    <string name="verificationMail">Email Verification</string>
    <string name="phone_number">Phone Number</string>
    <string name="residential_address">Residential Address</string>
    <string name="enter_residential_address">Enter Residential Address</string>
    <string name="enter_city">Enter City</string>
    <string name="state">State</string>
    <string name="enterstate">Enter State</string>
    <string name="zipcode">ZipCode</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="country">Country</string>
    <string name="enter_country">Enter Country</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="mobileSelected">By Mobile</string>
    <string name="by_email">By Email</string>
    <string name="Login">Login</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="enterPhoneNumber">Enter Phone Number</string>
    <string name="enterPassword">Enter Your Password</string>
    <string name="EmailAddress">Email Address</string>
    <string name="enterEmail">Enter email address</string>
    <string name="Password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="or">or</string>
    <string name="signupWithSocialAccount">Sign Up with Social Accounts</string>
    <string name="don_t_have_a_account_signup">Don’t have an account?</string>
    <string name="enter_phone">*Please enter phone number.</string>
    <string name="enter_password">*Please enter password.</string>
    <string name="validPassword">*Password contains at least 6 or more characters.</string>
    <string name="select_pet_tpe">*Please select pet type.</string>
    <string name="select_pet_tpe_first">*Please select first pet type.</string>
    <string name="select_pet_category">*Please select pet category.</string>
    <string name="email_enter">*Please enter email address.</string>
    <string name="email_valid">*Please enter valid email.</string>
    <string name="signup">Sign Up</string>
    <string name="sign_up_desc">Please enter the following information to register your account.</string>
    <string name="pet_pic">Pet Picture</string>
    <string name="user_pic">User Picture</string>
    <string name="first_name">First Name</string>
    <string name="firstName">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="lastName">Enter Last Name</string>
    <string name="user_name">User Name</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="Email">Email</string>
    <string name="emailEnter">Enter Email Address</string>
    <string name="address">Address</string>
    <string name="address_enter">Enter Residential Address</string>
    <string name="Country">Country</string>
    <string name="CountrySelect">Select Country</string>
    <string name="State">State</string>
    <string name="StateSelect">Select State</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="citySelect">Select City</string>
    <string name="tAndC">I agree to all</string>
    <string name="and">and</string>
    <string name="privacy">Privacy Policy</string>
    <string name="term_Policy">Terms &amp; Conditions</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="first_name_enter">*Please enter first name</string>
    <string name="valid_first_name_enter">*Please enter valid first name.</string>
    <string name="last_name_enter">*Please enter last name.</string>
    <string name="valid_last_name_enter">*Please enter valid last name.</string>
    <string name="enter_user_name_valid">*Please enter user name.</string>
    <string name="select_gender">*Please select gender.</string>
    <string name="enter_address">*Please enter address.</string>
    <string name="enter_address_valid">*Please enter a valid address.</string>
    <string name="select_country">*Please select country.</string>
    <string name="select_state">*Please select state.</string>
    <string name="enter_zipcode">*Enter zipCode.</string>
    <string name="select_city">*Please select city.</string>
    <string name="accept_term_condition">*Please accept the Terms &amp; conditions.</string>
    <string name="Forgot">Forgot Password</string>
    <string name="Submit">Submit</string>
    <string name="verificationPhone">Phone Verification</string>
    <string name="desc_number">Please enter the 6 digit verification code that was sent to +91 XXXXXXXXXX. The code is valid for 3 minutes.</string>
    <string name="desc_mail">Please enter the 6 digit verification code that was sent to </string>
    <string name="desc_mail_valid">The code is valid for 3 minutes.</string>
    <string name="resend_code">Resend Code</string>
    <string name="otp_verification">*Please enter otp.</string>
    <string name="valid_otp_verification">*Please enter a valid otp.</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="enterNewPassword">Enter New Password</string>
    <string name="enterConfirmPassword">Enter Confirm Password</string>
    <string name="password_confirm">*Please enter confirm password.</string>
    <string name="old_password_enter">*Please enter old password .</string>
    <string name="new_password_enter">*Please enter new password .</string>
    <string name="pet_name_enter">*Please enter pet name.</string>
    <string name="select_date">*Please select date.</string>
    <string name="enter_type">*Please enter type.</string>
    <string name="color_name">*Please enter color name.</string>
    <string name="breed_name">*Please enter breed name.</string>
    <string name="peculiarity_name">*Please enter peculiarity name.</string>
    <string name="name_">*Please enter name.</string>
    <string name="date_of_birth_select">*Please enter date of birth.</string>
    <string name="origin_enter">*Please enter origin.</string>
    <string name="enter_event">*Please enter event name.</string>
    <string name="select_image">*Please select atleast one image.</string>
    <string name="date_event">*Please select Date of event.</string>
    <string name="enter_description">*Please enter description.</string>
    <string name="select_category">*Please select category.</string>
    <string name="select_sub_category">*Please select sub category.</string>
    <string name="friends">Friend Requests</string>
    <string name="add_to_market">Add To Market</string>
    <string name="remove_to_market">Remove </string>
    <string name="Events">Events </string>
    <string name="my_events">My Events </string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comment</string>
    <string name="pet_category">Pet Category</string>
    <string name="pets_category">Select Category</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete your account?</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="later">Later</string>
    <string name="pet_info">Pet Info</string>
    <string name="pet_details">Pet Details :</string>
    <string name="owner_details">Owner Details :</string>
    <string name="showcase_products_amp_services"><![CDATA[Showcase Products & Services]]></string>
    <string name="latest_listed_pet">Latest Listed Pet</string>
    <string name="pet_breed">Pet Breed</string>
    <string name="add_pet_profile">Add Pet Profile</string>
    <string name="add_more_pet_profile"> Would you like to add more pet profile?</string>
    <string name="clear_all"><u>Clear All</u></string>
    <string name="apply">Apply</string>
    <string name="radius_of_current_location">Radius of current location</string>
    <string name="_10_miles">10 Miles</string>
    <string name="_20_miles">20 Miles</string>
    <string name="_30_miles">30 Miles</string>
    <string name="_40_miles">40 Miles</string>
    <string name="_50_miles">50 Miles</string>
    <string name="select_pet_breed">Select Pet Breed</string>
</resources>