<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4FFFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/BackButton"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentStart="true"
                android:background="@drawable/back_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/filter"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/tick"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/tick"
                android:visibility="gone" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/radius_of_current_location"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/oneMiles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/_10_miles"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/twoMiles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_background"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/_20_miles"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/threeMiles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_background"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/_30_miles"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/fourMiles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_background"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/_40_miles"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/fiveMiles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_background"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/_50_miles"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/sixMiles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_background"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:text="Above 50"
                    android:textColor="@color/black" />

            </LinearLayout>



            <TextView
                android:id="@+id/popupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text=""
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/country"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:id="@+id/llCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/white_border_background">

                <TextView
                    android:id="@+id/etCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@null"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/CountrySelect"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    app:drawableEndCompat="@drawable/arrow_down" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/red"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/state"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:id="@+id/llState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/white_border_background">

                <TextView
                    android:id="@+id/etState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@null"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/StateSelect"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    app:drawableEndCompat="@drawable/arrow_down" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/red"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/city"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:id="@+id/llCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/white_border_background">

                <TextView
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@null"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/citySelect"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    app:drawableEndCompat="@drawable/arrow_down" />

            </LinearLayout>

            <TextView
                android:id="@+id/petBreed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/pet_breed"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:id="@+id/llPetBreed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@drawable/white_border_background">
                <TextView
                    android:id="@+id/etPetBreed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="@dimen/_8sdp"
                    android:hint="@string/select_pet_breed"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:singleLine="true"
                    android:autofillHints=""
                    app:drawableEndCompat="@drawable/arrow_down" />

            </LinearLayout>


            <TextView
                android:id="@+id/tvPetBreed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:textColor="@color/red"
                android:visibility="gone"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/_1sdp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_50sdp"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/applyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/main_button_background"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_30sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:text="@string/apply"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/clearAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/main_button_background"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_25sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:text="@string/clear_all"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp" />
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>



    </androidx.core.widget.NestedScrollView>




</LinearLayout>
