<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



        <TextView
            android:id="@+id/tvSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_regular"
            android:gravity="center_horizontal"
            android:text="@string/add_pet_profile"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center"
            android:textColor="@color/themeColor"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />






    <TextView
        android:id="@+id/tvLogoutpopupString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_horizontal"
        android:text="@string/add_more_pet_profile"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:textStyle="normal" />



    <LinearLayout
        android:id="@+id/LanguageSelectionContinueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_25sdp"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">


        <LinearLayout
            android:id="@+id/llNoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_background"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_weight=".5"

            android:layout_marginEnd="@dimen/_15sdp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/later"
                android:paddingHorizontal="@dimen/_5sdp"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/llYesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/main_button_background"
            android:layout_marginStart="@dimen/_15sdp">

            <TextView
                android:id="@+id/yesText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:paddingVertical="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/yes"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>